--- a/index.html
+++ b/index.html
@@ -7,13 +7,16 @@
   <script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.production.min.js"></script>
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   <script type="text/babel">
+    function App() {
+      return (
+        <div>
+          <h1>Super Converter</h1>
+          <input placeholder="Minutes" />
+          <input placeholder="Hours" />
+        </div>
+      );
+    }
     const root = document.getElementById("root");
-    const Container = () => (
-      <div>
-        <h3>Total clicks: 0</h3>
-        <button>Click me</button>
-      </div>
-    );
-    ReactDOM.render(<Container />, root);
+    ReactDOM.render(<App />, root);
   </script>
 </html>
