--- a/test.html
+++ b/test.html
@@ -14,20 +14,11 @@
       };
       return (
         <div>
-          <div>
-            <h1 className="hi">Super Converter</h1>
-            <label htmlFor="minutes">Minutes</label>
-            <input
-              value={minutes}
-              id="minutes"
-              placeholder="Minutes"
-              type="number"
-              onChange={onChange}
-            />
-          </div>
-          <h4>You want to convert {minutes}</h4>
-          <label htmlFor="hours">Hours</label>
-          <input value={minutes} id="hours" placeholder="Hours" type="number" />
+          <h1> Test </h1>
+          <label htmlFor="minutes">Minutes</label>
+          <input placeholder="Minute" type="number" onChange={onChange} />
+          <h4> Your input value {minutes} </h4>
+          <input placeholder="Hours" type="number" />
         </div>
       );
     }
