--- a/index.html
+++ b/index.html
@@ -7,27 +7,27 @@
   <script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.production.min.js"></script>
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   <script type="text/babel">
+    function Btn() {
+      return (
+        <button
+          style={{
+            backgroundColor: "tomato",
+            color: "white",
+            padding: "10px 20px",
+            border: 0,
+            borderRadius: 10,
+          }}
+        >
+          Save Changes
+        </button>
+      );
+    }
+
     function App() {
-      const [minutes, setMinutes] = React.useState();
-      const onChange = (event) => {
-        setMinutes(event.target.value);
-      };
       return (
         <div>
-          <div>
-            <h1 className="hi">Super Converter</h1>
-            <label htmlFor="minutes">Minutes</label>
-            <input
-              value={minutes}
-              id="minutes"
-              placeholder="Minutes"
-              type="number"
-              onChange={onChange}
-            />
-          </div>
-          <h4>You want to convert {minutes}</h4>
-          <label htmlFor="hours">Hours</label>
-          <input value={minutes} id="hours" placeholder="Hours" type="number" />
+          <Btn />
+          <Btn />
         </div>
       );
     }
